crates/reinhardt-core/macros/tests/ui/injectable/fail/no_inject_non_option.stderr
error: Field with #[no_inject] but no default value must have type Option<T>
  --> tests/ui/injectable/fail/no_inject_non_option.rs:31:2
   |
31 | /     #[no_inject] // Error: must be Option<T>
32 | |     cache: Cache,
   | |________________^
